--- a/views/step-1.ejs
+++ b/views/step-1.ejs
@@ -1,10 +1,11 @@
 <% include ./partials/header %>
-
+<%= console.log(data) %>
 <div class="ui main text container">
   <div class="ui huge header"> Select a train </div>
   <div class="ui top attached segment">
-      <form action="/places" method="post" class = "ui form">
+      <form action="/step-1" method="post" class = "ui form">
         <div class="inline fields">
+          <input type="hidden" name="train_number" value="">
           <label> Do you want to go site-seeing? </label>
           <div class="field">
             <div class="ui radio checkbox">
